@@ -1,11 +1,0 @@
-zope.component
-zope.event
-zope.exceptions
-zope.i18n
-zope.interface
-zope.location
-zope.proxy
-zope.security
-zope.testing
-zope.deprecation
-zope.deferredimport
